--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.45.1",
+    "react": "^16.0.0-alpha.12",
+    "react-native": "^0.45.1",
     "react-native-vector-icons": "^4.2.0",
-    "teaset": "latest"
+    "teaset": "^0.2.6"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
