--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
+    "react-native-smart-splash-screen": "^2.3.4",
     "react-native-vector-icons": "^4.2.0",
     "teaset": "latest"
   },
